@@ -11,6 +11,9 @@
 	object and use it to apply settings on the preview widget
 	(setup_dialog): Connect missing signal
 	(setup_dialog): Enabled set_guard call
+	(peditor_value_changed): Set the sensitivity of the color frame
+	depending on the settings
+	(peditor_value_changed): Use correct keys
 
 	* background.schema: Added wallpaper-enabled
 
